--- a/Project/Oursourcing_HRM/web/css/framework.css
+++ b/Project/Oursourcing_HRM/web/css/framework.css
@@ -45,7 +45,7 @@ h1, h2, h3, h4, h5, h6, .heading{display:block; margin:0 0 20px 0; font-size:16p
 address{font-style:normal; font-weight:normal;}
 hr{display:block; width:100%; height:1px; border:solid; border-width:1px 0 0 0;}
 
-.wrapper{display:block; margin:0 auto 20px; text-align:left; word-wrap:break-word;}
+.wrapper{display:block; margin:0 auto; margin-top: 20px; text-align:left; word-wrap:break-word;}
 .rounded, #topbar, #header, #mainav, #slider, .container, #footer, #copyright{display:block; width:100%; box-sizing:border-box;}
 .rounded{margin:0; padding:10px;}
 
