--- a/Project/Oursourcing_HRM/web/css/layout-customize.css
+++ b/Project/Oursourcing_HRM/web/css/layout-customize.css
@@ -132,7 +132,7 @@
 
 /* Navigation
 --------------------------------------------------------------------------------------------------------------- */
-.nav ul-customize, .nav ol-customize{
+.nav-customized, .nav-customized ul, .nav-customized ol{
     margin:0; 
     padding:0; 
     list-style:none;
