--- a/Project/Oursourcing_HRM/web/css/Test.css
+++ b/Project/Oursourcing_HRM/web/css/Test.css
@@ -41,11 +41,12 @@ select {
   margin: 0;
   outline: 0;
   padding: 5px;
-  width: 40%;
+  width: 80%;
   background-color: #e8eeef;
   color: #8a97a0;
   box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 input[type="radio"],
