--- a/Project/Oursourcing_HRM/web/css/layout-customize.css
+++ b/Project/Oursourcing_HRM/web/css/layout-customize.css
@@ -132,7 +132,7 @@
 
 /* Navigation
 --------------------------------------------------------------------------------------------------------------- */
-.nav-customized, .nav-customized ul, .nav-customized ol{
+.nav-customize, .nav-customize ul, .nav-customize ol{
     margin:0; 
     padding:0; 
     list-style:none;
@@ -142,7 +142,7 @@
 
 /* Top Navigation */
 #mainav{text-align:center; text-transform:uppercase;}
-#mainav ul{}
+#mainav ul{margin:0;}
 #mainav ul ul{z-index:9999; position:absolute; width:160px;}
 #mainav ul ul ul{left:160px; top:0;}
 #mainav li{display:inline-block; position:relative; margin:0 30px 0 0; padding:0;}
