--- a/Project/Oursourcing_HRM/web/css/layout-customize.css
+++ b/Project/Oursourcing_HRM/web/css/layout-customize.css
@@ -356,6 +356,11 @@ tr:nth-child(odd), #comments li:nth-child(odd){color:inherit; background-color:#
 table a, #comments a{background-color:inherit;}
 
 
+/*button in popup*/
+.btn-in-popup {
+    margin: 0 auto; width: 10%; text-align: center;
+}
+
 /* ------------------------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------------------------ */
