--- a/Project/Oursourcing_HRM/web/css/Test.css
+++ b/Project/Oursourcing_HRM/web/css/Test.css
@@ -10,7 +10,7 @@ body {
 }
 
 form {
-  /*max-width: 300px;*/
+  max-width: 300px;
   margin: 10px auto;
   padding: 10px 20px;
   background: #f4f7f8;
@@ -18,7 +18,7 @@ form {
 }
 
 h1 {
-  margin: 0 0 30px 0;
+  margin: 0;
   text-align: center;
 }
 
@@ -107,6 +107,19 @@ label.light {
   text-align: center;
   text-shadow: 0 1px 0 rgba(255,255,255,0.2);
   border-radius: 100%;
+}
+
+
+.form-search {
+    width: 50%; 
+    background-color: inherit;
+    padding: 0px;
+    float: right;
+    margin: 0 auto;
+}
+
+.form-search input[type="text"] {
+    width: 70%;
 }
 
 .nostyle {
