progress 90%, only skill left

--- a/Project/Oursourcing_HRM/web/css/layout-customize.css
+++ b/Project/Oursourcing_HRM/web/css/layout-customize.css
@@ -430,6 +430,10 @@ table a, #comments a{background-color:inherit;}
     background-color: inherit !important;
 }
 
+.profileTextbox {
+    margin: 0 0 0 0 !important;
+}
+
 /* ------------------------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------------------------ */
