--- a/Project/Oursourcing_HRM/web/css/layout-customize.css
+++ b/Project/Oursourcing_HRM/web/css/layout-customize.css
@@ -448,61 +448,61 @@ table a, #comments a{background-color:inherit;}
 }
 
 #tabs ul {
-        padding: 0px;
-        margin: 0px;
-        margin-left: 10px;
-        list-style-type: none;
-    }
+    padding: 0px;
+    margin: 0px;
+    margin-left: 10px;
+    list-style-type: none;
+}
 
-    #tabs ul li {
-        display: inline-block;
-        clear: none;
-        float: left;
-        height: 24px;
-    }
+#tabs ul li {
+    display: inline-block;
+    clear: none;
+    float: left;
+    height: 24px;
+}
 
-    #tabs ul li a {
-        position: relative;
-        margin-top: 16px;
-        display: block;
-        margin-left: 6px;
-        line-height: 24px;
-        padding-left: 10px;
-        background: #f6f6f6;
-        z-index: 100;
-        border: 1px solid #ccc;
-        border-bottom: 0px;
-        -moz-border-radius-topleft: 4px;
-        border-top-left-radius: 4px;
-        -moz-border-radius-topright: 4px;
-        border-top-right-radius: 4px;
-        width: 130px;
-        color: #000000;
-        text-decoration: none;
-        font-weight: bold;
-    }
+#tabs ul li a {
+    position: relative;
+    margin-top: 16px;
+    display: block;
+    margin-left: 6px;
+    line-height: 24px;
+    padding-left: 10px;
+    background: #f6f6f6;
+    z-index: 100;
+    border: 1px solid #ccc;
+    border-bottom: 0px;
+    -moz-border-radius-topleft: 4px;
+    border-top-left-radius: 4px;
+    -moz-border-radius-topright: 4px;
+    border-top-right-radius: 4px;
+    width: 130px;
+    color: #000000;
+    text-decoration: none;
+    font-weight: bold;
+}
 
-    #tabs ul li a:hover {
-        text-decoration: underline;
-    }
+#tabs ul li a:hover {
+    text-decoration: underline;
+}
 
-    #tabs #Content_Area {
-        padding: 15px 15px;
-        clear:both;
-        overflow:hidden;
-        line-height:19px;
-        position: relative;
-        top: 20px;
-        z-index: 5;
-        height: 150px;
-        overflow: hidden;
-    }
+#tabs #Content_Area {
+    padding: 15px 15px;
+    clear:both;
+    overflow:hidden;
+    line-height:19px;
+    position: relative;
+    top: 20px;
+    z-index: 5;
+    height: 150px;
+    overflow: hidden;
+}
 
-    .p { 
-        padding-left: 15px; 
-    }
-    
-    
+.p { 
+    padding-left: 15px; 
+}
+
+
 
 .table tbody tr .tdCenter {
     text-align: center;
@@ -599,7 +599,14 @@ table a, #comments a{background-color:inherit;}
     width: 50px;
     height: 30px;
     float: right;
-        
+
+}
+
+.editComment {
+    width: 50px;
+    height: 30px;
+    float: right;
+
 }
 
 .topic-comment {
@@ -626,6 +633,12 @@ table a, #comments a{background-color:inherit;}
     background-color: orange;
 }
 
+#stopEdit {
+    float: right; 
+    display: none; 
+    width: 100px; 
+    margin-right: 10px
+}
 
 
 /* ------------------------------------------------------------------------------------------------------------ */
