ProjectDetailServlet.java and related Screen

--- a/Project/Oursourcing_HRM/web/css/layout-customize.css
+++ b/Project/Oursourcing_HRM/web/css/layout-customize.css
@@ -694,7 +694,9 @@ table a, #comments a{background-color:inherit;}
 }
 
 
-
+.tabs-customized ul .active a {
+    background-color: yellow !important;
+}
 
 
 
