--- a/Project/Oursourcing_HRM/web/css/style.css
+++ b/Project/Oursourcing_HRM/web/css/style.css
@@ -139,7 +139,7 @@ input, textarea, select, label {
   border: 1px solid #172b4e;
   border-bottom-color: #142647;
   border-radius: 5px;
-  background-image: -webkit-radial-gradient(cover, #437dd6, #3960a6);
+  background-image: -webkit-radial-gradient(cover, #FFFFFF, #FFFFFF);
   background-image: -moz-radial-gradient(cover, #437dd6, #3960a6);
   background-image: -o-radial-gradient(cover, #437dd6, #3960a6);
   background-image: radial-gradient(cover, #437dd6, #3960a6);
@@ -191,19 +191,19 @@ input, textarea, select, label {
   margin-bottom: 15px;
   font-size: 25px;
   font-weight: bold;
-  color: #294779;
+  color: #FFFFFF;
   text-align: center;
   text-shadow: 0 1px rgba(255, 255, 255, 0.3);
-  background: #adcbfa;
+  background: #00AFF0;
   background-clip: padding-box;
-  border: 1px solid #284473;
-  border-bottom-color: #223b66;
+  border: 1px solid #FFFFFF;
+  border-bottom-color: #A0AABB;
   border-radius: 4px;
   cursor: pointer;
   background-image: -webkit-linear-gradient(top, #d0e1fe, #96b8ed);
   background-image: -moz-linear-gradient(top, #d0e1fe, #96b8ed);
   background-image: -o-linear-gradient(top, #d0e1fe, #96b8ed);
-  background-image: linear-gradient(to bottom, #d0e1fe, #96b8ed);
+  background-image: linear-gradient(to bottom, #00AFF0, #00AFF0);
   -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), inset 0 0 7px rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), inset 0 0 7px rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.15);
 }
