--- a/Project/Oursourcing_HRM/web/css/style.css
+++ b/Project/Oursourcing_HRM/web/css/style.css
@@ -163,7 +163,7 @@ input, textarea, select, label {
   padding: 0 9px;
   color: white;
   text-shadow: 0 1px black;
-  background: #2b3e5d;
+  background: #00AFF0;
   border: 1px solid #15243b;
   border-top-color: #0d1827;
   border-radius: 4px;
